20. Bucket snapshots.

Command-line Options:

java -jar CloudExplorer.jar put filename bucket
java -jar CloudExplorer.jar get filename bucket destination
java -jar CloudExplorer.jar delete filename bucket

#List bucket contents
java -jar CloudExplorer.jar ls bucket

#List buckets
java -jar CloudExplorer.jar listbuckets

#Delete a bucket
java -jar CloudExplorer.jar rmbucket bucket

#Create a bucket
java -jar CloudExplorer.jar makebucket bucket

#Sync to S3
java -jar CloudExplorer.jar synctos3 location bucket [folder]

#Sync from S3
java -jar CloudExplorer.jar syncfroms3 destination bucket [folder]

#Performance Test - PUT
java -jar CloudExplorer.jar uploadtest bucket size threads operations

#Performance Test - GET
java -jar CloudExplorer.jar downloadtest bucket size threads operations

#Search for files
java -jar CloudExplorer.jar search bucket what

#Create a folder
java -jar CloudExplorer.jar createfolder bucket name

#Delete everything
java -jar CloudExplorer.jar deleteall bucket

#Check for Cloud Explorer updates
java -jar CloudExplorer.jar upgrade

#Add S3 Account to config
java -jar CloudExplorer.jar add-account access_key secret_key endpoint port name

#Migrate a Bucket to another account/bucket
The following variables need to be set for the destination account first:
MIGRATE_ACCESS_KEY
MIGRATE_SECRET_KEY
MIGRATE_ENDPOINT
java -jar CloudExplorer.jar migrate bucket destination_bucket

#Background Sync from CLI:
The following variables need to be set first if a config file does not exist:
ACCESS_KEY
SECRET_KEY
ENDPOINT
BUCKET
DIRECTORY
java -jar CloudExplorer.jar backgroundsync

#Snapshot a Bucket
The following variables need to be set for the destination account first:
MIGRATE_ACCESS_KEY
MIGRATE_SECRET_KEY
MIGRATE_ENDPOINT
java -jar CloudExplorer.jar snapshot bucket snapshot_bucket [existing_snapshot_folder]


IRC Options:

URL bot: This bot will show a description of links posted in the channel.
!starturlbot
!stopurlbot